User registration has been done

--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                                     <action selector="closePressed:" destination="5b3-Mj-uFf" eventType="touchUpInside" id="f21-5j-ZTc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8V-s0-D8f">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8V-s0-D8f" customClass="RoundedButton" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="62.5" y="294" width="250" height="50"/>
                                 <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -279,7 +279,7 @@
                                     <action selector="closePressed:" destination="5b3-Mj-uFf" eventType="touchUpInside" id="T20-zV-Hkv"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7N-a4-56h">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7N-a4-56h" customClass="RoundedButton" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="62" y="597" width="250" height="50"/>
                                 <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -290,6 +290,9 @@
                                 <state key="normal" title="Create an account">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAcctPressed:" destination="mpU-51-bJE" eventType="touchUpInside" id="oIS-fL-VSs"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOG-bn-CfA">
                                 <rect key="frame" x="137" y="320" width="100" height="130"/>
@@ -302,6 +305,7 @@
                                 </state>
                                 <connections>
                                     <action selector="createAccountBtnPressed:" destination="5b3-Mj-uFf" eventType="touchUpInside" id="Cqk-XQ-50X"/>
+                                    <action selector="pickAvatarPressed:" destination="mpU-51-bJE" eventType="touchUpInside" id="OQX-Yt-wIR"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="S7t-2a-MSY">
@@ -384,6 +388,7 @@
                                 </state>
                                 <connections>
                                     <action selector="createAccountBtnPressed:" destination="5b3-Mj-uFf" eventType="touchUpInside" id="vl5-IL-SM0"/>
+                                    <action selector="pickBGColorPressed:" destination="mpU-51-bJE" eventType="touchUpInside" id="Ydq-3o-ew4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -407,6 +412,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="emailTxt" destination="K5j-9t-yd4" id="d2E-pG-OOT"/>
+                        <outlet property="passwordTxt" destination="F6l-uO-q0S" id="Tz9-5d-1WE"/>
+                        <outlet property="userImg" destination="Mc4-bC-oiW" id="eqW-Sv-0LD"/>
+                        <outlet property="userTxt" destination="uxt-4N-Baz" id="NBR-iU-cgQ"/>
                         <segue destination="UMf-V2-sKX" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="L1m-gG-caL"/>
                     </connections>
                 </viewController>
