--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -417,12 +417,107 @@
                         <outlet property="userImg" destination="Mc4-bC-oiW" id="eqW-Sv-0LD"/>
                         <outlet property="userTxt" destination="uxt-4N-Baz" id="NBR-iU-cgQ"/>
                         <segue destination="UMf-V2-sKX" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="L1m-gG-caL"/>
+                        <segue destination="ubM-2f-J1B" kind="show" identifier="toAvatarPicker" id="JPb-yr-5cn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wcD-Jd-Stb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="UMf-V2-sKX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2528.8000000000002" y="-14.842578710644679"/>
+        </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="JbE-Ge-czV">
+            <objects>
+                <viewController id="ubM-2f-J1B" customClass="AvatarPickerVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PZS-T2-m9a"/>
+                        <viewControllerLayoutGuide type="bottom" id="KUd-L8-ilP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Som-Ts-orR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5r-u1-kvT">
+                                <rect key="frame" x="16" y="28" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="5oX-xh-VYh"/>
+                                    <constraint firstAttribute="height" constant="30" id="DGr-Qn-7f3"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="smackBack"/>
+                                <connections>
+                                    <action selector="backBtnPressed:" destination="ubM-2f-J1B" eventType="touchUpInside" id="7pD-DZ-G9v"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ebL-qR-wVD">
+                                <rect key="frame" x="107.5" y="28" width="160" height="29"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="64Q-Nc-nH4"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="ubM-2f-J1B" eventType="valueChanged" id="oIu-KD-kMN"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yna-gT-yoa">
+                                <rect key="frame" x="0.0" y="78" width="375" height="589"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h4a-UO-4Sv">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="L1Z-uv-dv4" customClass="AvatarCell" customModule="Smack" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ac3-e6-0Ud">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="Ac3-e6-0Ud" firstAttribute="top" secondItem="L1Z-uv-dv4" secondAttribute="top" constant="10" id="a2G-Rv-uph"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ac3-e6-0Ud" secondAttribute="bottom" constant="10" id="hb3-uJ-PVe"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ac3-e6-0Ud" secondAttribute="trailing" constant="10" id="lIg-rV-zCe"/>
+                                            <constraint firstItem="Ac3-e6-0Ud" firstAttribute="leading" secondItem="L1Z-uv-dv4" secondAttribute="leading" constant="10" id="pYG-kd-Yg4"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarImage" destination="Ac3-e6-0Ud" id="HHm-mk-fjD"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="F5r-u1-kvT" firstAttribute="leading" secondItem="Som-Ts-orR" secondAttribute="leadingMargin" id="8HI-3D-sZi"/>
+                            <constraint firstItem="KUd-L8-ilP" firstAttribute="top" secondItem="yna-gT-yoa" secondAttribute="bottom" id="AdS-S9-9Pe"/>
+                            <constraint firstAttribute="trailing" secondItem="yna-gT-yoa" secondAttribute="trailing" id="L4H-X0-EzN"/>
+                            <constraint firstItem="yna-gT-yoa" firstAttribute="leading" secondItem="Som-Ts-orR" secondAttribute="leading" id="UEK-7x-IRE"/>
+                            <constraint firstItem="ebL-qR-wVD" firstAttribute="top" secondItem="PZS-T2-m9a" secondAttribute="bottom" constant="8" id="bdW-gR-xEq"/>
+                            <constraint firstItem="yna-gT-yoa" firstAttribute="top" secondItem="F5r-u1-kvT" secondAttribute="bottom" constant="20" id="eAs-Ky-9KQ"/>
+                            <constraint firstItem="F5r-u1-kvT" firstAttribute="top" secondItem="PZS-T2-m9a" secondAttribute="bottom" constant="8" id="hjf-pJ-fsO"/>
+                            <constraint firstItem="ebL-qR-wVD" firstAttribute="centerX" secondItem="Som-Ts-orR" secondAttribute="centerX" id="lrW-tf-WOa"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="yna-gT-yoa" id="W8b-S5-xvb"/>
+                        <outlet property="segmentControl" destination="ebL-qR-wVD" id="vFY-cz-8RT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eXu-Zt-RjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3448.8000000000002" y="71.514242878560722"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="Cpa-xD-p5v">
@@ -485,6 +580,7 @@
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
